added mobile functionality

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,6 @@
   <body>
     <h1> Chromatik
     </h1>
-    <p><a href="landing.html">Back to landing page</a></p>
+    <p><a href="landing.html">About</a></p>
   </body>
 </html>
