--- a/public/landing.html
+++ b/public/landing.html
@@ -1,15 +1,19 @@
-
-{% comment %} landing.html {% endcomment %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8">
     <title>My p5.js project</title>
+    <link rel="stylesheet" href="landing.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <h1>Welcome to my p5.js project!</h1>
-    <p>This project uses the p5.js library to create interactive visualizations.</p>
-    <p>Click the button below to try it out!</p>
+    <h1>Chromatik</h1>
+    <p>Welcome to our p5.js project! This project is designed to showcase the capabilities of the p5.js library, a powerful tool for creating interactive visualizations and animations.</p>
+    <h2>Overview</h2>
+    <p>This project is a web-based interactive visualization that allows users to explore the concept of music theory through color theory. By selecting different intervals and mixing them together, users can experiment with the buidling blocks of music and gain a deeper understanding of how intervals work.</p>    
+    <h2>Code</h2>
+    <p>The source code for this project is available on <a href="https://github.com/jomoslomo/dmae">GitHub</a>. Feel free to fork the project and contribute your own ideas!</p>
     <button onclick="location.href='index.html'">Try it out</button>
-</body>
+    </form>
+  </body>
 </html>
