--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">  
-    <title>Interval Identification</title>
+    <title>chromatik</title>
     <link rel="stylesheet" href="style.css">
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
